IataMessageProcessor/Parsers/Antlr/Fsr1/fsr1Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from fsr1.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class fsr1Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, SeparatorSlant=3, SeparatorHyphen=4, A=5, N=6, G=7, SeparatorCrlf=8;
	public const int
		RULE_fsr1 = 0, RULE_standardMessageIdentification = 1, RULE_consignmentDetail = 2, 
		RULE_flightDetails = 3, RULE_otherServiceInformation = 4, RULE_awbIdentification = 5, 
		RULE_awbOriginAndDestination = 6, RULE_quantityDetail = 7, RULE_totalConsignmentPieces = 8, 
		RULE_weightDetails = 9, RULE_natureOfGoods = 10, RULE_flightIdentification = 11, 
		RULE_airportsOfDepartureAndArrival = 12, RULE_osiDetails1stLine = 13, 
		RULE_osiDetails2stLine = 14, RULE_flightDate = 15, RULE_standardMessageIdentifier = 16, 
		RULE_lineIdentifier = 17, RULE_airlinePrefix = 18, RULE_awbSerialNumber = 19, 
		RULE_shipmentDescriptionCode = 20, RULE_numberOfPieces = 21, RULE_weightCode = 22, 
		RULE_weight = 23, RULE_carrierCode = 24, RULE_flightNumber = 25, RULE_dayOfScheduledDeparture = 26, 
		RULE_monthOfScheduledDeparture = 27, RULE_airportCodeOfDeparture = 28, 
		RULE_airportCodeOfArrival = 29, RULE_airportCodeOfOrigin = 30, RULE_airportCodeOfDestitation = 31, 
		RULE_manifestDescriptionOfGoods = 32, RULE_osiDescription = 33;
	public static readonly string[] ruleNames = {
		"fsr1", "standardMessageIdentification", "consignmentDetail", "flightDetails", 
		"otherServiceInformation", "awbIdentification", "awbOriginAndDestination", 
		"quantityDetail", "totalConsignmentPieces", "weightDetails", "natureOfGoods", 
		"flightIdentification", "airportsOfDepartureAndArrival", "osiDetails1stLine", 
		"osiDetails2stLine", "flightDate", "standardMessageIdentifier", "lineIdentifier", 
		"airlinePrefix", "awbSerialNumber", "shipmentDescriptionCode", "numberOfPieces", 
		"weightCode", "weight", "carrierCode", "flightNumber", "dayOfScheduledDeparture", 
		"monthOfScheduledDeparture", "airportCodeOfDeparture", "airportCodeOfArrival", 
		"airportCodeOfOrigin", "airportCodeOfDestitation", "manifestDescriptionOfGoods", 
		"osiDescription"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "SeparatorSlant", "SeparatorHyphen", "A", "N", "G", 
		"SeparatorCrlf"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "fsr1.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static fsr1Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public fsr1Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public fsr1Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Fsr1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentificationContext standardMessageIdentification() {
			return GetRuleContext<StandardMessageIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConsignmentDetailContext consignmentDetail() {
			return GetRuleContext<ConsignmentDetailContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightDetailsContext[] flightDetails() {
			return GetRuleContexts<FlightDetailsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightDetailsContext flightDetails(int i) {
			return GetRuleContext<FlightDetailsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OtherServiceInformationContext otherServiceInformation() {
			return GetRuleContext<OtherServiceInformationContext>(0);
		}
		public Fsr1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fsr1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFsr1(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Fsr1Context fsr1() {
		Fsr1Context _localctx = new Fsr1Context(Context, State);
		EnterRule(_localctx, 0, RULE_fsr1);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			standardMessageIdentification();
			State = 69;
			consignmentDetail();
			State = 73;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 70;
					flightDetails();
					}
					} 
				}
				State = 75;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==A) {
				{
				State = 76;
				otherServiceInformation();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StandardMessageIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentifierContext standardMessageIdentifier() {
			return GetRuleContext<StandardMessageIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fsr1Parser.SeparatorCrlf, 0); }
		public StandardMessageIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_standardMessageIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStandardMessageIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StandardMessageIdentificationContext standardMessageIdentification() {
		StandardMessageIdentificationContext _localctx = new StandardMessageIdentificationContext(Context, State);
		EnterRule(_localctx, 2, RULE_standardMessageIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			standardMessageIdentifier();
			State = 80;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConsignmentDetailContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AwbIdentificationContext awbIdentification() {
			return GetRuleContext<AwbIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fsr1Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AwbOriginAndDestinationContext awbOriginAndDestination() {
			return GetRuleContext<AwbOriginAndDestinationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QuantityDetailContext quantityDetail() {
			return GetRuleContext<QuantityDetailContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TotalConsignmentPiecesContext totalConsignmentPieces() {
			return GetRuleContext<TotalConsignmentPiecesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NatureOfGoodsContext natureOfGoods() {
			return GetRuleContext<NatureOfGoodsContext>(0);
		}
		public ConsignmentDetailContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_consignmentDetail; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConsignmentDetail(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConsignmentDetailContext consignmentDetail() {
		ConsignmentDetailContext _localctx = new ConsignmentDetailContext(Context, State);
		EnterRule(_localctx, 4, RULE_consignmentDetail);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			awbIdentification();
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 83;
				awbOriginAndDestination();
				}
				break;
			}
			State = 87;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 86;
				quantityDetail();
				}
				break;
			}
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==A) {
				{
				State = 89;
				totalConsignmentPieces();
				}
			}

			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 92;
				natureOfGoods();
				}
			}

			State = 95;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlightDetailsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FlightIdentificationContext flightIdentification() {
			return GetRuleContext<FlightIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fsr1Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AirportsOfDepartureAndArrivalContext airportsOfDepartureAndArrival() {
			return GetRuleContext<AirportsOfDepartureAndArrivalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fsr1Parser.SeparatorCrlf, 0); }
		public FlightDetailsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flightDetails; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlightDetails(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlightDetailsContext flightDetails() {
		FlightDetailsContext _localctx = new FlightDetailsContext(Context, State);
		EnterRule(_localctx, 6, RULE_flightDetails);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			flightIdentification();
			State = 98;
			Match(SeparatorSlant);
			State = 99;
			airportsOfDepartureAndArrival();
			State = 100;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OtherServiceInformationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineIdentifierContext lineIdentifier() {
			return GetRuleContext<LineIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OsiDetails1stLineContext osiDetails1stLine() {
			return GetRuleContext<OsiDetails1stLineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OsiDetails2stLineContext osiDetails2stLine() {
			return GetRuleContext<OsiDetails2stLineContext>(0);
		}
		public OtherServiceInformationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_otherServiceInformation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOtherServiceInformation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OtherServiceInformationContext otherServiceInformation() {
		OtherServiceInformationContext _localctx = new OtherServiceInformationContext(Context, State);
		EnterRule(_localctx, 8, RULE_otherServiceInformation);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			lineIdentifier();
			State = 103;
			osiDetails1stLine();
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 104;
				osiDetails2stLine();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AwbIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AirlinePrefixContext airlinePrefix() {
			return GetRuleContext<AirlinePrefixContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorHyphen() { return GetToken(fsr1Parser.SeparatorHyphen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AwbSerialNumberContext awbSerialNumber() {
			return GetRuleContext<AwbSerialNumberContext>(0);
		}
		public AwbIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_awbIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAwbIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AwbIdentificationContext awbIdentification() {
		AwbIdentificationContext _localctx = new AwbIdentificationContext(Context, State);
		EnterRule(_localctx, 10, RULE_awbIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			airlinePrefix();
			State = 108;
			Match(SeparatorHyphen);
			State = 109;
			awbSerialNumber();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AwbOriginAndDestinationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AirportCodeOfOriginContext airportCodeOfOrigin() {
			return GetRuleContext<AirportCodeOfOriginContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AirportCodeOfDestitationContext airportCodeOfDestitation() {
			return GetRuleContext<AirportCodeOfDestitationContext>(0);
		}
		public AwbOriginAndDestinationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_awbOriginAndDestination; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAwbOriginAndDestination(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AwbOriginAndDestinationContext awbOriginAndDestination() {
		AwbOriginAndDestinationContext _localctx = new AwbOriginAndDestinationContext(Context, State);
		EnterRule(_localctx, 12, RULE_awbOriginAndDestination);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			airportCodeOfOrigin();
			State = 112;
			airportCodeOfDestitation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QuantityDetailContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fsr1Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ShipmentDescriptionCodeContext shipmentDescriptionCode() {
			return GetRuleContext<ShipmentDescriptionCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberOfPiecesContext numberOfPieces() {
			return GetRuleContext<NumberOfPiecesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WeightDetailsContext weightDetails() {
			return GetRuleContext<WeightDetailsContext>(0);
		}
		public QuantityDetailContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_quantityDetail; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuantityDetail(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QuantityDetailContext quantityDetail() {
		QuantityDetailContext _localctx = new QuantityDetailContext(Context, State);
		EnterRule(_localctx, 14, RULE_quantityDetail);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(SeparatorSlant);
			State = 115;
			shipmentDescriptionCode();
			State = 116;
			numberOfPieces();
			State = 118;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 117;
				weightDetails();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TotalConsignmentPiecesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ShipmentDescriptionCodeContext shipmentDescriptionCode() {
			return GetRuleContext<ShipmentDescriptionCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberOfPiecesContext numberOfPieces() {
			return GetRuleContext<NumberOfPiecesContext>(0);
		}
		public TotalConsignmentPiecesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_totalConsignmentPieces; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTotalConsignmentPieces(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TotalConsignmentPiecesContext totalConsignmentPieces() {
		TotalConsignmentPiecesContext _localctx = new TotalConsignmentPiecesContext(Context, State);
		EnterRule(_localctx, 16, RULE_totalConsignmentPieces);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			shipmentDescriptionCode();
			State = 121;
			numberOfPieces();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WeightDetailsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public WeightCodeContext weightCode() {
			return GetRuleContext<WeightCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WeightContext weight() {
			return GetRuleContext<WeightContext>(0);
		}
		public WeightDetailsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_weightDetails; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWeightDetails(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WeightDetailsContext weightDetails() {
		WeightDetailsContext _localctx = new WeightDetailsContext(Context, State);
		EnterRule(_localctx, 18, RULE_weightDetails);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			weightCode();
			State = 124;
			weight();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NatureOfGoodsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fsr1Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ManifestDescriptionOfGoodsContext manifestDescriptionOfGoods() {
			return GetRuleContext<ManifestDescriptionOfGoodsContext>(0);
		}
		public NatureOfGoodsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_natureOfGoods; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNatureOfGoods(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NatureOfGoodsContext natureOfGoods() {
		NatureOfGoodsContext _localctx = new NatureOfGoodsContext(Context, State);
		EnterRule(_localctx, 20, RULE_natureOfGoods);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			Match(SeparatorSlant);
			State = 127;
			manifestDescriptionOfGoods();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlightIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CarrierCodeContext carrierCode() {
			return GetRuleContext<CarrierCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fsr1Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FlightNumberContext flightNumber() {
			return GetRuleContext<FlightNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightDateContext flightDate() {
			return GetRuleContext<FlightDateContext>(0);
		}
		public FlightIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flightIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifsr1Visitor<TResult> typedVisitor = visitor as Ifsr1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlightIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlightIdentificationContext flightIdentification() {
		FlightIdentificationContext _localctx = new FlightIdentificationContext(Context, State);
		EnterRule(_localctx, 22, RULE_flightIdentification);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			carrierCode();
			State = 131;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==N) {
				{
				State = 130;
				flightNumber();
				}
			}

			State = 133;
			Match(SeparatorSlant);
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==N) {
				{
				State = 134;
				flightDate();
				}
			}
